worked on getting hero image to display correctly on mobile

--- a/styles/index/index.scss
+++ b/styles/index/index.scss
@@ -13,7 +13,8 @@
 
 	.hero__img {
 		width: 60%;
-		height: 325px;
+		max-width: 230px;
+		height: 335px;
 		background-image: url("../../assets/home/desktop/illustration-phone-mockup.svg");
 		background-size: cover;
 		background-repeat: no-repeat;
